tests/errors/unknown_type.rsg
// TEST: compile_error
// EXPECT-ERROR: unknown type 'Foo'
module test_err

fn main() {
    var x: Foo = 1
}
